Refactor styles in globals.css and update component layouts for improved aesthetics and responsiveness; adjust height properties in TwitterCard and LinkedinCard for better visual consistency.

--- a/app/globals.css
+++ b/app/globals.css
@@ -3,7 +3,7 @@
 :root {
   --background: #f8f8f8;
   --foreground: #171717;
-  --primary: #f96900;
+  --primary: #171717;
 }
 
 body {
@@ -14,10 +14,10 @@ body {
 *::-moz-selection {
   /* Code for Firefox */
   color: var(--primary);
-  background: #ffffffa3;
+  background: #fff5eb;
 }
 
 *::selection {
   color: var(--primary);
-  background: #ffffffa3;
+  background: #fff5eb;
 }
